--- a/Angular-GitHubApi-Portfolio/package.json
+++ b/Angular-GitHubApi-Portfolio/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
+    "bootstrap": "^4.3.1",
+    "ng2-slim-loading-bar": "^4.0.0",
     "nodemon": "^1.19.1",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
