--- a/Angular-GitHubApi-Portfolio/package.json
+++ b/Angular-GitHubApi-Portfolio/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
+    "postinstall": "ng build — aot — prod",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -20,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
     "bootstrap": "^4.3.1",
+    "dotenv": "^8.0.0",
     "ng2-slim-loading-bar": "^4.0.0",
     "nodemon": "^1.19.1",
     "rxjs": "~6.4.0",
@@ -47,5 +49,8 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
+  },
+  "engines": {
+    "node":"10.16.0","npm":"6.10.1"
   }
 }
