--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "typescript": "~3.4.3"
   },
   "engines": {
-    "node":"10.16.0","npm":"6.10.1"
+    "node":"10.16.0",
+    "npm":"6.10.1"
   }
 }
