--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start1": "ng serve",
     "start": "node api/server.js",
-    "postinstall": "ng build --output-path dist",
+    "postinstall": "ng build --aot -prod",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -13,6 +13,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~8.0.6",
+    "@angular/compiler-cli": "~8.0.3",
     "@angular/animations": "~8.0.3",
     "@angular/common": "~8.0.3",
     "@angular/compiler": "~8.0.3",
@@ -21,6 +23,7 @@
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
+    "typescript": "~3.4.3",
     "bootstrap": "^4.3.1",
     "dotenv": "^8.0.0",
     "ng2-slim-loading-bar": "^4.0.0",
@@ -35,10 +38,11 @@
     "@angular/cli": "~8.0.6",
     "@angular/compiler-cli": "~8.0.3",
     "@angular/language-service": "~8.0.3",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -52,7 +56,7 @@
     "typescript": "~3.4.3"
   },
   "engines": {
-    "node":"10.16.0",
-    "npm":"6.10.1"
+    "node": "10.16.0",
+    "npm": "6.10.1"
   }
 }
