--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start1": "ng serve",
     "start": "node api/server.js",
-    "postinstall": "ng build --aot -prod",
+    "postinstall": "ng build --output-path dist",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
