--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start1": "ng serve",
     "start": "node api/server.js",
-    "postinstall": "ng build --prod='true' --output-path dist",
+    "postinstall": "ng build --prod --output-path dist",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -13,24 +12,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~8.0.6",
-    "@angular/compiler-cli": "~8.0.3",
     "@angular/animations": "~8.0.3",
+    "@angular/cli": "~8.0.6",
     "@angular/common": "~8.0.3",
     "@angular/compiler": "~8.0.3",
+    "@angular/compiler-cli": "~8.0.3",
     "@angular/core": "~8.0.3",
     "@angular/forms": "~8.0.3",
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
-    "typescript": "~3.4.3",
     "bootstrap": "^4.3.1",
     "dotenv": "^8.0.0",
-    "ng2-slim-loading-bar": "^4.0.0",
+    "express": "^4.17.1",
     "nodemon": "^1.19.1",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
+    "typescript": "~3.4.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
