--- a/.env
+++ b/.env
@@ -5,4 +5,6 @@ DB_HOST=@ds231377.mlab.com:31377/task-manager-db
 PORT=8080
 DB_CONN=mongodb://
 
+# MONGODB_URI=mongodb://herokuTaskManagerUser001:q*C7DGm^800l@ds359847.mlab.com:59847/heroku_10pf7mvq
+
 MONGODB_URI=mongodb://task-manager-user-001:E88Z2exnb5u3BwM@ds231377.mlab.com:31377/task-manager-db
