--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "mongodb": "^3.3.0",
     "mongoose": "^5.6.4",
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
