Adding a parser for the password.

--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ DB_CONN=mongodb://
 
 # MONGODB_URI=mongodb://herokuTaskManagerUser001:q*C7DGm^800l@ds359847.mlab.com:59847/heroku_10pf7mvq
 
-MONGODB_URI=mongodb://task-manager-user-001:E88Z2exnb5u3BwM@ds231377.mlab.com:31377/task-manager-db
+MONGODB_URI=mongodb://taskManagerUser002:XVT123H9GX29tcUPQ@ds231377.mlab.com:31377/task-manager-db
